<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OsciPrime</string>
    <string name="ratetitle">Thank you for supporting us!</string>
    <string name="ratetext">Take a second to give us some feedback.\nWe try to constantly improve our Open Source Oscilloscope and appreciate constructive feedback. By rating our application your are helping us to make it better.\n\nPlease consider that this application is <b>free of charge and has no adds</b> when rating.</string>
    <string name="btRateit">Rate</string>
    <string name="btLater">Later</string>
    <string name="btDontShowAgain">Don\'t show again</string>
    <string name="audio_input">Audio Input</string>
    <string name="osciprime_usb">OsciPrime USB</string>
    <string name="network_source">From Network Stream (Experimental)</string>
    <string name="probe_compensation_for_usb_osciprime">Probe Compensation for USB OsciPrime</string>
    <string name="ip_address">IP Address</string>
    <string name="done">Done</string>
    <string name="network_sink">Send to Network (Experimental)</string>
    <string name="background_color">Background Color</string>
    <string name="grid_color">Grid Color</string>
    <string name="ch1_color">CH1 Color</string>
    <string name="ch2_color">CH2 Color</string>
    <string name="measurement_color">Measurement Color</string>
    <string name="interface_color">Interface Color</string>
    <string name="_256_points_on_display">256 Points on Display</string>
    <string name="_512_points_on_display">512 Points on Display</string>
    <string name="_1024_points_on_display">1024 Points on Display</string>
    <string name="_2048_points_on_display">2048 Points on Display</string>
    <string name="_4096_points_on_display">4096 Points on Display</string>
    <string name="show_channel_1">Show Channel 1</string>
    <string name="show_channel_2">Show Channel 2</string>
    <string name="show_clipping_of_channel_1">CH1 Value Range Indication</string>
    <string name="show_clipping_of_channel_2">CH2 Value Range Indication</string>
    <string name="show_handle_labels">Show Handle Labels</string>
    <string name="hardware_accelerate_nfor_android_3_1_will_restart_">Hardware Accelerate\nFor Android 3.1+ (will restart)</string>
    <string name="kill_service_when_activity_is_closed_n_will_be_unable_to_reprocess_nsamples_of_the_current_buffer_">Kill Service when Activity is closed\n(will be unable to reprocess\nsamples of the current buffer)</string>
    <string name="news">News</string>
    <string name="currently_no_news_available_">Currently no news available.</string>
    <string name="include_ch1">Include CH1</string>
    <string name="include_ch2">Include CH2</string>
    <string name="include_grid">Include Grid</string>
    <string name="include_trigger_level">Include Trigger Level</string>
    <string name="_800px">800px</string>
    <string name="_1200px">1200px</string>
    <string name="_1600px">1600px</string>
    <string name="export">Export</string>
    <string name="trigger_on_ch1">Trigger on CH1</string>
    <string name="trigger_on_ch2">Trigger on CH2</string>
    <string name="trigger_on_rising_edge">Trigger on Rising Edge</string>
    <string name="trigger_on_falling_edge">Trigger on Falling Edge</string>
    <string name="run_stop">Run/Stop</string>
    <string name="fetch_calibration_for_osciprime_online">Fetch Calibration for OsciPrime online</string>
    <string name="cannot_run_a_network_sink_while_acuiring_data_from_a_network_source">Cannot run a network sink while acuiring data from a network source</string>
    <string name="hide_navigation_bar_android_4_0_">Hide Navigation Bar (Android 4.0+)</string>
    <string name="stop_sampling_when_activity_is_closed">Stop Sampling when Activity is closed</string>
    <string name="debug_usb_osciprime">Debug USB OsciPrime</string>
    <string name="initialize_usb">Initialize USB</string>
    <string name="send_command">Send Command</string>
    <string name="could_not_initialize_usb_device">Could not initialize USB device</string>
    <string name="show_buffer_preview_usb_only_">Show Buffer Preview (experimental)</string>
</resources>